2010-04-11  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Move remaining edit state into `struct editstuff'.

	* base.h (behavior): Add member `editstuff'.
	* rcsedit.c: #include "b-divvy.h".
	(editstuff): New struct.
	(fedit, editname, editline, linecorr, sff)
	(line, gap, gapsize, linelim): Delete vars.
	(EDIT): New macro.
	(lockname, newRCSname): Update.
	(ensure_editstuff): New static func.
	(insertline, deletelines, snapshotedit, finishedit, swapeditfiles)
	(copylines, editstring, keepdirtemp, dirtempunlink):
	Use `EDIT (foo)' instead of deletes vars.
	(copystring, enterstring, rcswriteopen, makedirtemp): Likewise.
	Also, call `ensure_editstuff'.

2010-04-10  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Add abstractions: SHARED, SINGLE

	* b-divvy.h (SHARED, SINGLE): New #define:s.
	* b-isr.c: Do s/shared/SHARED/g; do s/single/SINGLE/g.
	* co.c: Likewise.
	* merger.c: Likewise.
	* rcsclean.c: Likewise.
	* rcsdiff.c: Likewise.
	* rcsfnms.c: Likewise.
	* rcsgen.c: Likewise.
	* rcskeep.c: Likewise.
	* rcslex.c: Likewise.
	* rcsutil.c: Likewise.

2010-04-10  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Make `putdesc' reentrant.

	* rcsgen.c: #include "b-divvy.h".
	(putdesc): Take pointer to `struct cbuf', save description text
	there; route input from stdin and file to go into `shared' space.
	* base.h (putdesc): Update func decl.
	* ci.c (main): Update call to `putdesc'.
	* rcs.c (main): Likewise.

2010-04-10  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Move remaining parse state into `struct parse_state'.

	* base.h (parse_state.next): Add member `hsh'.
	(parse_state): Add members `rilebuf', `Oerrloop', `ignoredp', `hshtab'.
	* rcslex.c (nexthsh, hshtab, ignored_phrases): Delete vars.
	(warnignore): Use `LEX (ignoredp)'.
	(lookup): Use `LEX (hshtab)', `NEXT (hsh)'.
	(Lexinit): Allocate `LEX (hshtab)' if necessary;
	clear `LEX (Oerrloop)'; use `LEX (ignoredp)'.
	(getnum): Use `NEXT (hsh)'.
	(fd2_RILE): Init `LEX (rilebuf)' if necessary.
	(Oerrloop): Delete var.